--- a/style.css
+++ b/style.css
@@ -3036,7 +3036,7 @@ Google Map Css
 ==================================================================*/
 
 .hero_area_v8 {
-    background: url(images/portfolio_banner.jpg) no-repeat;
+    background: url(http://img.netbian.com/file/2018/0813/6b0ff6dbcaca75d91fd430e862d843c7.jpg) no-repeat;
     background-position: center center;
     padding: 30px 0 40px;
     background-size: 105%;
